package ar.edu.utn.frba.dds.domain.solicitud;

/**
 * Tipos de estados de un solicitudDeEliminacion.
 */
public enum Estado {
  ACEPTADA,
  RECHAZADA,
  PENDIENTE
}